fixing icons at lower screen resolutions

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
 			<select id="chapterSelect" class="lookup dynamic chapterSelect" tabindex="2"></select>
 		</div>
 		<nav class="left">
-			<a href="javascript:history.back();"><span aria-hidden="true" class="icon-arrow-left"></span>Back</a>
-			<a href="#help-popup" class="open-popup"><span aria-hidden="true" class="icon-question"></span>Help</a>
+			<a href="javascript:history.back();" title="back"><span aria-hidden="true" class="icon-arrow-left"></span><span class="link-text">Back</span></a>
+			<a href="#help-popup" class="open-popup" title="help"><span aria-hidden="true" class="icon-question"></span><span class="link-text">Help</span></a>
 		</nav>
 		<nav class="right">
-			<a href="#search-popup" class="open-popup" id="keyCode83"><span aria-hidden="true" class="icon-search"></span>Search</a>
-			<a href="#settings-popup" class="open-popup" id="keyCode48"><span aria-hidden="true" class="icon-cog2"></span>Settings</a>
-			<a href="#bookmarks-popup" class="open-popup" id="keyCode66"><span aria-hidden="true" class="icon-bookmark2"></span>Bookmarks</a>
-			<a href="#go-to-popup" class="open-popup" id="keyCode71"><span aria-hidden="true" class="icon-book"></span>Go to</a>
+			<a href="#search-popup" class="open-popup" id="keyCode83" title="search"><span aria-hidden="true" class="icon-search"></span><span class="link-text">Search</span></a>
+			<a href="#settings-popup" class="open-popup" id="keyCode48" title="settings"><span aria-hidden="true" class="icon-cog2"></span><span class="link-text">Settings</span></a>
+			<a href="#bookmarks-popup" class="open-popup" id="keyCode66" title="bookmarks"><span aria-hidden="true" class="icon-bookmark2"></span><span class="link-text">Bookmarks</span></a>
+			<a href="#go-to-popup" class="open-popup" id="keyCode71" title="go to"><span aria-hidden="true" class="icon-book"></span><span class="link-text">Go to</span></a>
 		</nav>
 	</div>
 	<div class="goToPanel">
