add jumping to chapter by typing numbers

--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
 				<li>Open go-to popup: alt then g</li>
 				<li>Next reference: =</li>
 				<li>Previous reference: -</li>
+				<li>Jump to chapter: just type in a number!</li>
 			</ul>
 			<p>Tested in Chrome. Should work everywhere except IE.</p>
 		</div>
