adding a super slow speed search option so that i can test on iOS to see if we can fix the crashing issue

--- a/index.html
+++ b/index.html
@@ -342,6 +342,15 @@
 					<li>
 						Reading mode: <input type="checkbox" id="readingMode" />
 					</li>
+					<li>
+						Search speed:
+						<select id="searchSpeed">
+							<option value="1">Fast</option>
+							<option value="1000">Slow</option>
+							<option value="10000">Super slow</option>
+						</select><br />
+						Slow devices crash if you try to search to fast!
+					</li>
 				</ul>
 			</form>
 		</div>
