fixing an issue in Neh 7:68

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<a href="#book=1 Chronicles&chapter=1" data-chapters="29">1 Chronicles <span class="chapter"></span></a>
 			<a href="#book=2 Chronicles&chapter=1" data-chapters="36">2 Chronicles <span class="chapter"></span></a>
 			<a href="#book=Ezra&chapter=1" data-chapters="10">Ezra <span class="chapter"></span></a>
-			<a href="#book=Nehemia&chapter=1" data-chapters="13">Nehemiah <span class="chapter"></span></a>
+			<a href="#book=Nehemiah&chapter=1" data-chapters="13">Nehemiah <span class="chapter"></span></a>
 			<a href="#book=Esther&chapter=1" data-chapters="10">Esther <span class="chapter"></span></a>
 			<a href="#book=Job&chapter=1" data-chapters="42">Job <span class="chapter"></span></a>
 			<a href="#book=Psalm&chapter=1" data-chapters="150">Psalm <span class="chapter"></span></a>
