fixing cross references

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<a href="#book=Song of Songs&chapter=1" data-chapters="8">Song of Songs <span class="chapter"></span></a>
 			<a href="#book=Isaiah&chapter=1" data-chapters="66">Isaiah <span class="chapter"></span></a>
 			<a href="#book=Jeremiah&chapter=1" data-chapters="52">Jeremiah <span class="chapter"></span></a>
-			<a href="#book=Lamentation&chapter=1" data-chapters="4">Lamentations <span class="chapter"></span></a>
+			<a href="#book=Lamentations&chapter=1" data-chapters="4">Lamentations <span class="chapter"></span></a>
 			<a href="#book=Ezekiel&chapter=1" data-chapters="48">Ezekiel <span class="chapter"></span></a>
 			<a href="#book=Daniel&chapter=1" data-chapters="12">Daniel <span class="chapter"></span></a>
 			<a href="#book=Hosea&chapter=1" data-chapters="14">Hosea <span class="chapter"></span></a>
