fix some of the families for the grace family

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="javascripture.appcache?v=3.7">
+<html manifest="javascripture.appcache">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="google" content="notranslate" />
@@ -206,7 +206,7 @@
 						<input type="text" name="morph" id="morph" value="" placeholder="Morphology" />
 					</li>
 					<li>
-						
+
 						<!--<div data-role="fieldcontain">
 							<fieldset data-role="controlgroup" class="ui-hide-label">
 								<legend>Combine terms?</legend>
@@ -253,7 +253,7 @@
 						</select>
 					</li>
 					<li>
-						<label>Search range:</label>							
+						<label>Search range:</label>
 						<select id="searchRange" name="searchRange">
 							<option value="verse">Verse</option>
 							<option value="chapter">Chapter</option>
@@ -467,7 +467,7 @@
 		  </g>
 		  <text transform="matrix(0.136985 0 0 0.136985 7.25415 217.045)" font-weight="normal" xml:space="preserve" text-anchor="middle" font-family="Monospace" font-size="350" id="svg_2" y="-779.99747" x="432.482218" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" fill="#ffffff">{js}</text>
 		 </g>
-		
+
 		</svg>
 		<br />
 		<br />
