adding the World English Bible version :)

--- a/index.html
+++ b/index.html
@@ -285,6 +285,13 @@
 			<form>
 				<ul>
 					<li>
+						Version:
+						<select name="version" id="versionSelector">
+							<option value="kjv">King James Version</option>
+							<option value="web">World English Bible</option>
+						</select>
+					</li>
+					<li>
 						Fonts: <select name="bodyFontFamily" class="changeStyle">
 							<option value="Arial, Helvetica;">Arial</option>
 							<option value="font-family: 'Bookman Old Style';">Bookman Old Style</option>
@@ -491,6 +498,8 @@
 </script>
 <script type="text/javascript" src="data/strongs-dictionary.js"></script>
 <script type="text/javascript" src="data/kjvdwyer7.js"></script>
+<script type="text/javascript" src="data/web3.js"></script>
+<script type="text/javascript" src="modules/versionSelector.js"></script>
 <script type="text/javascript" src="data/strongsObjectWithFamilies.js"></script>
 <script type="text/javascript" src="data/hebrew6.js"></script>
 <script type="text/javascript" src="data/greek4.js"></script>
