fixes for acts and romans in WEB

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 				<li>Previous reference: -</li>
 				<li>Jump to chapter: just type in a number!</li>
 			</ul>
-			<p>Tested in Chrome. Should work everywhere except IE.</p>
+			<p>Built in Chrome. Tested in FireFox.</p>
 		</div>
 	</div>
 </div>
