adding a reading mode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="javascripture.appcache?v=3.9.6">
+<html manifest="javascripture.appcache?v=3.9.7">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="google" content="notranslate" />
@@ -169,6 +169,10 @@
 	<div id="referenceTracking" class="searchPanel" style="float: right; width: 200px;"></div>
 
 	<div class="referencePanel" id="reference">
+		 <div class="reading-mode-switch">
+		 	<span id="readingMode" class="icon-fullscreen"></span>
+		 </div>
+
 		<div class="verse">
 			<div id="wordControlPanel" class="not-active">
 				<style></style>
