tracking the reference you go to in the goToReference field. this field will become the main one for navigating verses.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="javascripture.appcache?v=3.9.7">
+<html manifest="javascripture.appcache?v=3.9.8">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="google" content="notranslate" />
@@ -92,7 +92,7 @@
 			<a href="#settings-popup" class="open-popup" id="keyCode48" title="settings"><span aria-hidden="true" class="icon-cog2"></span><span class="link-text">Settings</span></a>
 			<a href="#bookmarks-popup" class="open-popup" id="keyCode66" title="bookmarks"><span aria-hidden="true" class="icon-bookmark2"></span><span class="link-text">Bookmarks</span></a>
 			<a href="#go-to-popup" class="open-popup" id="keyCode71" title="go to"><span aria-hidden="true" class="icon-book"></span><span class="link-text">Go to</span></a>
-			<span href="#" class="randomReference icon-die"></span>
+			<span href="#" class="randomReference icon-die" title="Load random reference"></span>
 		</nav>
 	</div>
 	<div class="goToPanel">
@@ -396,9 +396,6 @@
 			<form class="goToReference">
 				<input type="text" id="goToReference" placeholder="Go to reference..." />
 			</form>
-			<div class="advanced">
-				<a href="#" class="randomReference">Load random reference</a>
-			</div>
 		</div>
 	</div>
 </div>
@@ -522,6 +519,7 @@
 <script type="text/javascript" src="js/colors.js"></script>
 <script type="text/javascript" src="js/colorpicker.js"></script>
 <script type="text/javascript" src="js/events.js"></script>
+<script type="text/javascript" src="modules/readingMode.js"></script>
 <script type="text/javascript" src="js/functionalScripts.js"></script>
 <script src="js/searchApi.js"></script>
 <script src="js/morphologyApi.js"></script>
