Fixing typos identified in #10

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 							<option value="1000">Slow</option>
 							<option value="10000">Super slow</option>
 						</select><br />
-						Slow devices crash if you try to search to fast!
+						Slow devices crash if you try to search too fast!
 					</li>
 				</ul>
 			</form>
@@ -388,7 +388,7 @@
 		<div class="content-padding">
 			<h2>Help</h2>
 			<ul>
-				<li>To find out about a work, click on it</li>
+				<li>To find out about a word, click on it</li>
 				<li>To search for a word, double click it</li>
 			</ul>
 			<p>Keyboard shortcuts</p>
