adding transliteration data for #8

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 <div class="wordControlPanelTemplate">
 	<style></style>
 	<div class="word-details">
-		<span class="wordControlPanelStrongsNumber"></span> | <span class="wordControlPanelEnglish"></span> | <span class="wordControlPanelLemma"></span>
+		<span class="wordControlPanelStrongsNumber"></span> | <span class="wordControlPanelEnglish"></span> | <span class="wordControlPanelLemma"></span> | <span class="wordControlPanelTransliteration"></span> | <span class="wordControlPanelPronounciation"></span>
 		<div class="word-tree" id="wordTreeRoots"></div>
 		<div class="word-tree" id="wordTreeBranches"></div>
 		<div class="word-tree" id="wordTreeFamily"></div>
