force updates to app cache

--- a/index.html
+++ b/index.html
@@ -516,4 +516,11 @@
 <script src="js/frequencyAnalysis.js"></script>
 <script src="js/randomReference.js"></script>
 
+<script>
+var appCache = window.applicationCache;
+appCache.update(); // Attempt to update the user's cache.
+if (appCache.status == window.applicationCache.UPDATEREADY) {
+  appCache.swapCache();  // The fetch was successful, swap in the new cache.
+}
+</script>
 </html>
