--- a/index.html
+++ b/index.html
@@ -394,6 +394,16 @@
 		</div>
 	</div>
 </div>
+
+<div id="cache-popup" class="popup">
+	<div class="content">
+		<a aria-hidden="true" class="icon-cross close-popup"></a>
+		<div class="content-padding">
+			<h2>Cache</h2>
+			<p>A new version of JavaScripture is available. <a href="javascript:window.location.reload();">Reload to install</a></p>
+		</div>
+	</div>
+</div>
 <!--			<div class="collapsable closed">
 				<h2>Colours</h2>
 				<form id="changeColor">
@@ -517,9 +527,12 @@
 
 <script>
 var appCache = window.applicationCache;
-appCache.update(); // Attempt to update the user's cache.
-if (appCache.status == window.applicationCache.UPDATEREADY) {
-  appCache.swapCache();  // The fetch was successful, swap in the new cache.
+if ( 'undefined' != typeof appCache && 1 === appCache.status ) {
+	appCache.update(); // Attempt to update the user's cache.
+	if (appCache.status == window.applicationCache.UPDATEREADY) {
+		appCache.swapCache();  // The fetch was successful, swap in the new cache.
+		$( '#cache-popup' ).popup( 'open' );
+	}
 }
 </script>
 </html>
