--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="javascripture.appcache?v=4">
+<html manifest="javascripture.appcache">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="google" content="notranslate" />
@@ -530,6 +530,7 @@ var appCache = window.applicationCache;
 if ( 'undefined' != typeof appCache && 1 === appCache.status ) {
 	appCache.update(); // Attempt to update the user's cache.
 	if (appCache.status == window.applicationCache.UPDATEREADY) {
+		alert( 'update appcache' );
 		appCache.swapCache();  // The fetch was successful, swap in the new cache.
 		$( '#cache-popup' ).popup( 'open' );
 	}
