--- a/index.html
+++ b/index.html
@@ -526,14 +526,23 @@
 <script src="js/randomReference.js"></script>
 
 <script>
-var appCache = window.applicationCache;
-if ( 'undefined' != typeof appCache && 1 === appCache.status ) {
-	appCache.update(); // Attempt to update the user's cache.
-	if (appCache.status == window.applicationCache.UPDATEREADY) {
-		alert( 'update appcache' );
-		appCache.swapCache();  // The fetch was successful, swap in the new cache.
-		$( '#cache-popup' ).popup( 'open' );
-	}
-}
+
+	// Check if a new cache is available on page load.
+	window.addEventListener('load', function(e) {
+
+		window.applicationCache.addEventListener('updateready', function(e) {
+			if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
+				// Browser downloaded a new app cache.
+				$( '#cache-popup' ).popup( 'open' );
+
+	/*			if (confirm('A new version of this site is available. Load it?')) {
+					window.location.reload();
+				}*/
+			} else {
+				// Manifest didn't changed. Nothing new to server.
+			}
+		}, false);
+	}, false);
+
 </script>
 </html>
