fix the goto link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
 	<div class="goToPanel">
 		<div class="lookup bookSelect">
-			<h2><a href="#"><span class="link-text">Go to</span></a><a href="#go-to-popup" class="open-popup icon-book" id="keyCode71" title="go to"></a></h2>
+			<h2><span class="link-text">Go to</span><a href="#go-to-popup" class="open-popup icon-book" id="keyCode71" title="go to"></a></h2>
 			<a href="#book=Genesis&chapter=1" data-chapters="50">Genesis <span class="chapter"></span></a>
 			<a href="#book=Exodus&chapter=1" data-chapters="40">Exodus <span class="chapter"></span></a>
 			<a href="#book=Leviticus&chapter=1" data-chapters="27">Leviticus <span class="chapter"></span></a>
@@ -505,6 +505,7 @@
 <script src="js/colors.js"></script>
 <script src="js/colorpicker.js"></script>
 <script src="js/events.js"></script>
+<script src="modules/disableHover.js"></script>
 <script src="modules/readingMode.js"></script>
 <script src="js/functionalScripts.js"></script>
 <script src="modules/translateLiterally.js"></script>
