--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
 			<form>
 				<ul>
 					<li>
-						Fonts: <select name="bodyFontFamily" class="changeStyle">
+						<label>Fonts:</label>
+						<select name="bodyFontFamily" class="changeStyle">
 							<option value="Arial, Helvetica;">Arial</option>
 							<option value="font-family: 'Bookman Old Style';">Bookman Old Style</option>
 							<option value="font-family: 'Courier New', Courier;">Courier</option>
@@ -212,7 +213,8 @@
 						</select>
 					</li>
 					<li>
-						Font size: <select name="bodyFontSize" class="changeStyle">
+						<label>Font size:</label>
+						<select name="bodyFontSize" class="changeStyle">
 							<option value="font-size: 80%;">80%</option>
 							<option value="font-size: 90%;">90%</option>
 							<option value="font-size: 100%;">100%</option>
@@ -229,7 +231,8 @@
 						</select>
 					</li>
 					<li>
-						Colours: <select id="subdueColorBy">
+						<label>Colours:</label>
+						<select id="subdueColorBy">
 							<option value="1">Very Bright</option>
 							<option value="1.5" selected="selected">Bright</option>
 							<option value="2">Normal</option>
@@ -238,16 +241,17 @@
 						</select>
 					</li>
 					<li>
-						<p><input type="checkbox" id="strictSearch" />strict search</p>
+						<label>Strict search</label>
+						<input type="checkbox" id="strictSearch" />
 					</li>
 					<li>
-						Search speed:
+						<label>Search speed:</label>
 						<select id="searchSpeed">
 							<option value="1">Fast</option>
 							<option value="1000">Slow</option>
 							<option value="10000">Super slow</option>
 						</select><br />
-						Slow devices crash if you try to search too fast!
+						This is a test - slow devices crash if you try to search too fast!
 					</li>
 				</ul>
 			</form>
