adding strict search option

--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
 							<option>chapter</option>
 						</select>
 					</li>
+					<li>
+						<label>Strict search</label>
+						<input type="checkbox" name="strict" id="strict" />
+					</li>
 				</ul>
 				<input type="submit" value="Search" />
 			</form>
@@ -239,10 +243,6 @@
 							<option value="3">Dark</option>
 							<option value="4">Very Dark</option>
 						</select>
-					</li>
-					<li>
-						<label>Strict search</label>
-						<input type="checkbox" id="strictSearch" />
 					</li>
 					<li>
 						<label>Search speed:</label>
