--- a/index.html
+++ b/index.html
@@ -422,12 +422,7 @@
 </div>
 
 </body>
-<script type="text/javascript" src="js/jquery-2.0.3.js"></script>
-<script type="text/javascript" src="js/json2.js"></script>
-<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
-<script src="js/raphael-min.js"></script>
-<script src="js/raphael.pie.js"></script>
-<script type="text/javascript" src="data/bible.js"></script>
+
 <script>
 	var javascripture = {
 		api: {},
@@ -435,6 +430,16 @@
 		modules: {}
 	};
 </script>
+
+<!-- libs -->
+<script type="text/javascript" src="js/jquery-2.0.3.js"></script>
+<script type="text/javascript" src="js/json2.js"></script>
+<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
+<script src="js/raphael-min.js"></script>
+<script src="js/raphael.pie.js"></script>
+
+<!-- data -->
+<script type="text/javascript" src="data/bible.js"></script>
 <script type="text/javascript" src="data/strongs-dictionary.js"></script>
 <script type="text/javascript" src="data/kjvdwyer7.js"></script>
 <script type="text/javascript" src="data/web3.js"></script>
@@ -445,16 +450,20 @@
 <script src="data/crossReferences.js"></script>
 <script src="data/morphology.js"></script>
 <script src="data/literalConsistent.js"></script>
+
+<!-- apis -->
+<script src="api/search.js"></script>
+
+<!--modules -->
 <script src="modules/hebrew.js"></script>
 <script src="js/colors.js"></script>
-<script src="js/colorpicker.js"></script>
 <script src="js/events.js"></script>
 <script src="modules/disableHover.js"></script>
 <script src="modules/readingMode.js"></script>
 <script src="js/functionalScripts.js"></script>
 <script src="modules/translateLiterally.js"></script>
 <script src="modules/bookmarks.js"></script>
-<script src="js/searchApi.js"></script>
+
 <script src="js/morphologyApi.js"></script>
 <script src="js/searchBindings.js"></script>
 <script src="js/wordPanel.js"></script>
