removing unneccessary  type=text/javascript and adding the api files

--- a/index.html
+++ b/index.html
@@ -432,21 +432,21 @@
 </script>
 
 <!-- libs -->
-<script type="text/javascript" src="js/jquery-2.0.3.js"></script>
-<script type="text/javascript" src="js/json2.js"></script>
-<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
+<script src="js/jquery-2.0.3.js"></script>
+<script src="js/json2.js"></script>
+<script src="js/jquery.scrollTo.js"></script>
 <script src="js/raphael-min.js"></script>
 <script src="js/raphael.pie.js"></script>
 
 <!-- data -->
-<script type="text/javascript" src="data/bible.js"></script>
-<script type="text/javascript" src="data/strongs-dictionary.js"></script>
-<script type="text/javascript" src="data/kjvdwyer7.js"></script>
-<script type="text/javascript" src="data/web3.js"></script>
-<script type="text/javascript" src="modules/versionSelector.js"></script>
-<script type="text/javascript" src="data/strongsObjectWithFamilies.js"></script>
-<script type="text/javascript" src="data/hebrew6.js"></script>
-<script type="text/javascript" src="data/greek4.js"></script>
+<script src="data/bible.js"></script>
+<script src="data/strongs-dictionary.js"></script>
+<script src="data/kjvdwyer7.js"></script>
+<script src="data/web3.js"></script>
+<script src="modules/versionSelector.js"></script>
+<script src="data/strongsObjectWithFamilies.js"></script>
+<script src="data/hebrew6.js"></script>
+<script src="data/greek4.js"></script>
 <script src="data/crossReferences.js"></script>
 <script src="data/morphology.js"></script>
 <script src="data/literalConsistent.js"></script>
