moving libs to their own directory

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 				<select name="version" id="versionSelector">
 					<option value="kjv">KJV</option>
 					<option value="web">WEB</option>
-				</select>
-
-<!--					<option value="lc">Literal Consistent</option>-->
+					<!--<option value="lc">Literal Consistent</option>-->
 				</select>
 				<input type="text" id="goToReference" placeholder="Go to reference" />
 			</form>
@@ -432,11 +430,11 @@
 </script>
 
 <!-- libs -->
-<script src="js/jquery-2.0.3.js"></script>
-<script src="js/json2.js"></script>
-<script src="js/jquery.scrollTo.js"></script>
-<script src="js/raphael-min.js"></script>
-<script src="js/raphael.pie.js"></script>
+<script src="lib/jquery-2.0.3.min.js"></script>
+<script src="lib/json2.js"></script>
+<script src="lib/jquery.scrollTo.js"></script>
+<!--<script src="lib/raphael-min.js"></script>
+<script src="lib/raphael.pie.js"></script>-->
 
 <!-- data -->
 <script src="data/bible.js"></script>
