removing unused files and moving needed libs to /lib

--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
 <script src="lib/jquery-2.0.3.min.js"></script>
 <script src="lib/json2.js"></script>
 <script src="lib/jquery.scrollTo.js"></script>
+<script src="lib/jquery.waypoints.js"></script>
 <!--<script src="lib/raphael-min.js"></script>
 <script src="lib/raphael.pie.js"></script>-->
 
@@ -469,7 +470,6 @@
 <script src="js/reference.js"></script>
 <script src="js/popup.js"></script>
 <script src="js/toggler.js"></script>
-<script src="js/jquery.waypoints.js"></script>
 <script src="js/wayPoint.js"></script>
 <script src="js/keyboardShortcuts.js"></script>
 <script src="js/crossReferences.js"></script>
