Big refactor of search which should make it a lot faster

--- a/index.html
+++ b/index.html
@@ -245,9 +245,10 @@
 					<li>
 						<label>Search speed:</label>
 						<select id="searchSpeed">
-							<option value="1">Fast</option>
-							<option value="1000">Slow</option>
-							<option value="10000">Super slow</option>
+							<option value="1">Hare</option>
+							<option value="10">Rabbit</option>
+							<option value="100">Tortoise</option>
+							<option value="1000">Snail</option>
 						</select><br />
 						This is a test - slow devices crash if you try to search too fast!
 					</li>
