fix data issues in the english text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="google" content="notranslate" />
 		<title>Javascripture</title>
 		<link rel="stylesheet" href="css/layout.css" />
+		<link rel="stylesheet" href="css/styles.css" />
 		<style id="bodyFontFamily"></style>
 		<style id="bodyFontSize"></style>
 	</head>
