--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
 					</a>
 				</li>
 			</ul>
-			<input type="hidden" name="language" value="english" />
 			<input type="hidden" name="clusivity" value="exclusive" />
 			<input type="hidden" name="range" value="verse" />
 		</form>
@@ -467,7 +466,7 @@
 <script src="modules/bookmarks.js"></script>
 
 <script src="js/morphologyApi.js"></script>
-<script src="js/searchBindings.js"></script>
+<script src="js/searchBindings.js?2"></script>
 <script src="js/wordPanel.js"></script>
 <script src="js/loading.js"></script>
 <script src="js/reference.js"></script>
