switching to a web worker for search

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 <script src="modules/bookmarks.js"></script>
 
 <script src="js/morphologyApi.js"></script>
-<script src="js/searchBindings.js?2"></script>
+<script src="js/searchBindings.js"></script>
 <script src="js/wordPanel.js"></script>
 <script src="js/loading.js"></script>
 <script src="js/reference.js"></script>
