trying to fix a problem with web workers

--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
 <script src="data/morphology.js"></script>
 <script src="data/literalConsistent.js"></script>
 
-<!-- apis -->
-<script src="api/search.js"></script>
+<!-- apis
+<script src="api/search.js"></script> -->
 
 <!--modules -->
 <script src="modules/hebrew.js"></script>
