save font selection

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</div>
 	<div class="goToPanel">
 		<div class="lookup bookSelect">
-			<h2><span class="link-text">Go to</span><a href="#go-to-popup" class="open-popup icon-book" id="keyCode71" title="go to"></a></h2>
+			<h2><a href="#go-to-popup" class="link-text open-popup" id="keyCode71" title="go to">Go to<span class="icon-book"></span></a></h2>
 			<a href="#book=Genesis&chapter=1" data-chapters="50">Genesis <span class="chapter"></span></a>
 			<a href="#book=Exodus&chapter=1" data-chapters="40">Exodus <span class="chapter"></span></a>
 			<a href="#book=Leviticus&chapter=1" data-chapters="27">Leviticus <span class="chapter"></span></a>
@@ -205,13 +205,13 @@
 					<li>
 						<label>Fonts:</label>
 						<select name="bodyFontFamily" class="changeStyle">
-							<option value="Arial, Helvetica;">Arial</option>
-							<option value="font-family: 'Bookman Old Style';">Bookman Old Style</option>
-							<option value="font-family: 'Courier New', Courier;">Courier</option>
-							<option value="font-family: Georgia;">Georgia</option>
-							<option value="font-family: 'Lucida Sans Unicode', 'Lucida Grande';">Lucida</option>
-							<option value="font-family: 'Times New Roman', Times;">Times</option>
-							<option value="font-family: Verdana, Geneva;">Verdana</option>
+							<option value="font-family: Helvetica, Arial !important;">Arial</option>
+							<option value="font-family: 'Bookman Old Style' !important;">Bookman Old Style</option>
+							<option value="font-family: 'Courier New', Courier !important;">Courier</option>
+							<option value="font-family: Georgia !important;">Georgia</option>
+							<option value="font-family: 'Lucida Sans Unicode', 'Lucida Grande' !important;">Lucida</option>
+							<option value="font-family: 'Times New Roman', Times !important;">Times</option>
+							<option value="font-family: Verdana, Geneva !important;">Verdana</option>
 						</select>
 					</li>
 					<li>
