refactoring the references module so it can be used like an api

--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
 
 <!-- apis
 <script src="api/search.js"></script> -->
+<script src="api/reference.js"></script>
 
 <!--modules -->
 <script src="modules/hebrew.js"></script>
