refactoring to split the api from the module

--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
 <script src="js/functionalScripts.js"></script>
 <script src="modules/translateLiterally.js"></script>
 <script src="modules/bookmarks.js"></script>
+<script src="modules/reference.js"></script>
 
 <script src="js/morphologyApi.js"></script>
 <script src="js/searchBindings.js"></script>
